lab-7-assets/overlays/cluster3/cloudhunter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cloudhunter
  name: cloudhunter
  namespace: cloudhunter
spec:
  replicas: 5
