lab-7-assets/overlays/cluster3/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman
  name: pacman
  namespace: pacman
spec:
  replicas: 5
