lab-7-assets/overlays/cluster3/cloudhunter-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloudhunter
  namespace: cloudhunter
spec:
  host: cloudhunter.apps.azure1.azure-clusters.rhforum.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cloudhunter
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
