lab-7-assets/overlays/cluster3/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
  namespace: pacman
spec:
  host: pacman-pacman.apps.apps.cluster-0a16.0a16.sandbox205.opentlc.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pacman
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
